# dfc

./: .gitignore  AUTHORS  AUTHORS.md  CHANGELOG  CHANGELOG.md  CMakeLists.txt  FreeBSD.mk  HACKING  HACKING.md  LICENSE  Makefile  README  README.md  TRANSLATORS  TRANSLATORS.md  detect  dfc.1  dfc.c  dfc.h  main.c
.github/workflows/: build.yml
CMakeModules/: GettextTranslate.cmake
cmake/modules/: FindLibintl.cmake  GettextTranslate.cmake
conf/: dfcrc
conf/de/: dfcrc
conf/fr/: dfcrc
conf/nl/: dfcrc
man/: dfc.1
man/de/: dfc.1
man/fr/: dfc.1
man/nl/: dfc.1
po/: LINGUAS  Makefile  Makevars  POTFILES.in  de.po  fr.po  nl.po  sv.po
src/: csv.c  csv.h  dfc.c  dfc.h  disp.c  disp.h  display.h  dotfile.c  dotfile.h  export.h  extern.h  extern.h.in  html.c  html.h  list.c  list.h  tex.c  tex.h  text.c  text.h  util.c  util.h
src/export/: csv.c  display.h  export.h  html.c  json.c  tex.c  text.c
src/platform/: services-bsd.c  services-linux.c  services-solaris.c  services.h
